--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(plot_scatter)
 export(plot_transcript_heatmap)
 export(plot_vars)
 export(plot_volcano)
+export(prepare_fish)
 export(read_kallisto)
 export(read_kallisto_h5)
 export(read_kallisto_tsv)
@@ -52,7 +53,6 @@ export(sleuth_live)
 export(sleuth_live_settings)
 export(sleuth_lrt)
 export(sleuth_prep)
-export(sleuth_prep_sailfish)
 export(sleuth_results)
 export(sleuth_to_matrix)
 export(sleuth_wt)
